--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,3 +12,8 @@ spring:
         dialect: 'org.hibernate.dialect.PostgreSQL9Dialect'
         jdbc.time_zone: UTC
         use_nationalized_character_data: true
+  servlet:
+    multipart:
+      max-file-size: 100MB
+      max-request-size: 100MB
+      enabled: true
